# omnichat

./: .gitignore  .system_generated_diff.txt  AGENTS.md  CLAUDE.md  README.md  WALKTHROUGH.md  build.gradle.kts  debug.keystore.base64  diff.txt  generate_icons.py  gradle.properties  metadata.json  my-upload-key.jks
.artifacts/20260522-115651-fe87432b-1872-4a54-a94c-8828ffe1b851/: implementation_plan.artifact.md  walkthrough.artifact.md
.artifacts/20260522-130916-2df93b2f-cb4f-4b6a-b40a-defd6643af89/: implementation_plan.artifact.md  walkthrough.artifact.md
.artifacts/20260522-162757-cfabbc4d-863d-4f35-9160-e5a26b77b60f/: implementation_plan.artifact.md  task.artifact.md  walkthrough.artifact.md
.artifacts/20260522-165900-73efd1cf-39dc-4461-9c56-8cc167c581c7/: implementation_plan.artifact.md  task.artifact.md  walkthrough.artifact.md
.claude/: settings.local.json
.github/workflows/: release.yml
.kiro/specs/agent-team-bugfix/: .config.kiro
.opencode/plugin/: code-index-first.ts
.opencode/skills/comment-edits/: SKILL.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  node_bridge.cpp  python_bridge.cpp
app/src/main/cpp/node_include/node/: node.h
docs/superpowers/plans/: 2026-05-26-workspace-prompt-optimization.md  2026-05-27-workspace-p0p1p2.md  2026-05-27-workspace-refactor.md  2026-05-28-agent-team-claude-code-port.md  2026-05-28-builtin-tool-refactor.md  2026-05-28-builtin-tools-optimization.md  2026-05-28-memory-improvements.md  (+5 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+132 files in other folders)
